--- a/index.html
+++ b/index.html
@@ -57,11 +57,22 @@
             </h1>
           </div>
           <div class="jumbo-socials">
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-whatsapp"></i>
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-linkedin-in"></i>
-            <i class="fab fa-github"></i>
+            <a href="https://instagram.com/aryasaputrawan" target="_blank"
+              ><i class="fab fa-instagram"></i
+            ></a>
+            <a
+              href="https://www.facebook.com/profile.php?id=100009951542758"
+              target="_blank"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/arya-saputrawan-711402243/"
+              target="_blank"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
+            <a href="https://github.com/aryasa22" target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
           </div>
         </div>
 
