--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./css/style.min.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Arya</title>
   </head>
   <body>
@@ -27,7 +27,7 @@
         <ul class="navbar-links">
           <li class="navbar-link home-link link-active">Home</li>
           <li class="navbar-link projects-link">Projects</li>
-          <li class="navbar-link contact-link">Contact Me</li>
+          <li class="navbar-link contact-link">About Me</li>
         </ul>
       </div>
     </nav>
@@ -39,23 +39,22 @@
           Home
         </li>
         <li class="mobile-navbar-link mobile-projects-link">Projects</li>
-        <li class="mobile-navbar-link mobile-contact-link">Contact Me</li>
+        <li class="mobile-navbar-link mobile-contact-link">About Me</li>
       </ul>
     </div>
 
     <!-- Home Section -->
     <section id="homeSection" class="container">
-      <div class="bg-text bg-text-1">WELCOME</div>
-      <div class="bg-text bg-text-2">WELCOME</div>
-
       <div class="home-content">
         <div class="jumbo">
+          <p class="medium-text">Hi There!</p>
+          <p class="small-text">I am</p>
           <div class="jumbo-heading">
             <h1>
-              Hello,<br />
-              I am <span class="green-text">Arya</span>
+              Putu <span class="blue-text">Arya</span> Saputrawan
             </h1>
           </div>
+          <p class="small-text">Data Enthusiast</p>
           <div class="jumbo-socials">
             <a href="https://instagram.com/aryasaputrawan" target="_blank"
               ><i class="fab fa-instagram"></i
@@ -75,14 +74,6 @@
             ></a>
           </div>
         </div>
-
-        <div class="intro">
-          <h2 class="intro-title">Front End Website Developer.</h2>
-          <p class="intro-subtitle text-muted">
-            Building responsive websites and web apps.
-          </p>
-          <button class="intro-btn btn main-btn">Contact Me</button>
-        </div>
       </div>
     </section>
 
@@ -95,26 +86,22 @@
 
         <div class="project-content">
           <div class="project-img">
-            <img src="./images/project-img-greenie.png" alt="" />
+            <img src="./images/project-img-credit-risk.jpg" alt="" />
           </div>
           <div class="project-desc">
-            <h4 class="project-title">Greenie</h4>
+            <h4 class="project-title">Credit Risk Prediction</h4>
             <p class="project-subtitle text-muted">
-              Responsive landing page made by using HTML, CSS, and JavaScript.
+              In this project, i implemented a Logistic Regression 
+              model to predict whether a loan will be a bad loan or not. 
+              The model succeeded in helping to reduce bad loan rate by 5.43%.
             </p>
 
             <div class="project-buttons">
               <a
-                href="https://aryasa22.github.io/greenie"
+                href="https://github.com/aryasa22/credit-risk-prediction"
                 target="_blank"
                 class="btn main-btn project-main-btn"
-                >Live Page</a
-              >
-              <a
-                href="https://github.com/aryasa22/greenie.git"
-                target="_blank"
-                class="btn secondary-btn project-secondary-btn"
-                >Source Code</a
+                >Visit</a
               >
             </div>
           </div>
@@ -122,26 +109,24 @@
 
         <div class="project-content">
           <div class="project-img reverse-img">
-            <img src="./images/project-img-shinny.png" alt="" />
+            <img src="./images/project-img-online-shoppers.png" alt="" />
           </div>
           <div class="project-desc">
-            <h4 class="project-title">Shinny</h4>
+            <h4 class="project-title">E-commerce Web Visitor Conversion Prediction</h4>
             <p class="project-subtitle text-muted">
-              Responsive landing page made by using HTML, CSS, and JavaScript.
+              In this project, I, also my team built an Extreme Gradient Boost (XG Boost Classifier) 
+              model to predict that whether a web visitor
+              will be converted to purchase or not. 
+              The model succeeded in helping to increase the conversion
+              rate by 54.66%.
             </p>
 
             <div class="project-buttons">
               <a
-                href="https://aryasa22.github.io/shinny"
+                href="https://github.com/aryasa22/online-shoppers-intention"
                 target="_blank"
                 class="btn main-btn project-main-btn"
-                >Live Page</a
-              >
-              <a
-                href="https://github.com/aryasa22/shinny.git"
-                target="_blank"
-                class="btn secondary-btn project-secondary-btn"
-                >Source Code</a
+                >Visist</a
               >
             </div>
           </div>
@@ -149,111 +134,27 @@
 
         <div class="project-content">
           <div class="project-img">
-            <img src="./images/project-img-pokemon.png" alt="" />
+            <img src="./images/project-img-sql-ecomm.png" alt="" />
           </div>
           <div class="project-desc">
-            <h4 class="project-title">Pokemon App</h4>
+            <h4 class="project-title">SQL - E Commerce Performance Analysis</h4>
             <p class="project-subtitle text-muted">
-              Web app that gives you information of every pokemon. The web tells
-              the stats and abilities of every pokemon.
+              In this project explained an analysis about the performance of an 
+              e-commerce in South America in the 2016-2018 time period. There are three aspects analyzed, 
+              namely customers growth, products quality, and payment type usage. 
+              All of the analysis metrics for the three aspects mentioned are drawn by using PostgreSQL.
             </p>
 
             <div class="project-buttons">
               <a
-                href="https://aryasa22.github.io/pokemon-app"
+                href="https://github.com/aryasa22/e-comm-performance-analysis"
                 target="_blank"
                 class="btn main-btn project-main-btn"
-                >Live Page</a
-              >
-              <a
-                href="https://github.com/aryasa22/pokemon-app.git"
-                target="_blank"
-                class="btn secondary-btn project-secondary-btn"
-                >Source Code</a
+                >Visist</a
               >
             </div>
           </div>
         </div>
-
-        <div class="project-content">
-          <div class="project-img reverse-img">
-            <img src="./images/project-img-mlbb.png" alt="" />
-          </div>
-          <div class="project-desc">
-            <h4 class="project-title">MLBB Heroes</h4>
-            <p class="project-subtitle text-muted">
-              This web app gives you information about Mobile Legends heroes
-              such as name, role, and skills.
-            </p>
-
-            <div class="project-buttons">
-              <a
-                href="https://aryasa22.github.io/mlbb-heroes"
-                target="_blank"
-                class="btn main-btn project-main-btn"
-                >Live Page</a
-              >
-              <a
-                href="https://github.com/aryasa22/mlbb-heroes.git"
-                target="_blank"
-                class="btn secondary-btn project-secondary-btn"
-                >Source Code</a
-              >
-            </div>
-          </div>
-        </div>
-
-        <div class="project-content">
-          <div class="project-img">
-            <img src="./images/project-img-todolist.png" alt="" />
-          </div>
-          <div class="project-desc">
-            <h4 class="project-title">My Todo</h4>
-            <p class="project-subtitle text-muted">
-              This web app allows you to make and store your daily tasks.
-            </p>
-
-            <div class="project-buttons">
-              <a
-                href="https://aryasa22.github.io/todo-list"
-                target="_blank"
-                class="btn main-btn project-main-btn"
-                >Live Page</a
-              >
-              <a
-                href="https://github.com/aryasa22/todo-list.git"
-                target="_blank"
-                class="btn secondary-btn project-secondary-btn"
-                >Source Code</a
-              >
-            </div>
-          </div>
-        </div>
-
-        <div class="project-content">
-          <div class="project-img reverse-img">
-            <img src="./images/project-img-tictactoe.png" alt="" />
-          </div>
-          <div class="project-desc">
-            <h4 class="project-title">Tic Tac Toe</h4>
-            <p class="project-subtitle text-muted">
-              You can play 2 player Tic Tac Toe game with your friend in this
-              web app.
-            </p>
-
-            <div class="project-buttons">
-              <a
-                href="https://aryasa22.github.io/tic-tac-toe"
-                target="_blank"
-                class="btn main-btn project-main-btn"
-                >Live Page</a
-              >
-              <a
-                href="https://github.com/aryasa22/tic-tac-toe.git"
-                target="_blank"
-                class="btn secondary-btn project-secondary-btn"
-                >Source Code</a
-              >
             </div>
           </div>
         </div>
@@ -264,32 +165,60 @@
     <section id="contactSection">
       <div class="container contact-content-container">
         <div class="section-title">
-          <h3>Contact Me</h3>
+          <h3>About Me</h3>
         </div>
+        <div class="about-contents">
+          <div class="about-item">
+            <p class="about-item-title">
+              SUMMARY
+            </p>
+            <p class="about-item-text">
+              I am graduated from Mathematics Education Department, 
+              Universitas Pendidikan Ganesha. I have a strong interest 
+              in data role careers such as Data Science and Data Analytics. 
+              Experienced working with data such as Querying (SQL), 
+              Data Visualization with Python or Tableau, and Machine Learning Modelling 
+              with Python. I achieved a predicate as Top 2 Student 
+              of the Data Science Bootcamp Batch 27 by Rakamin Academy.
+            </p>
+          </div>
 
-        <span class="error-msg hidden">Please fill all fields!</span>
+          <div class="about-item">
+            <p class="about-item-title">
+              EDUCATION
+            </p>
+            <div class="about-item-box">
+              <p class="bold-text">Universitas Pendidikan Ganesha</p>
+              <p>Mathematics Education (Aug 2016 - Mar 2021)</p>
+              <p>GPA 3.79/4.00</p>
+            </div>
 
-        <form class="contact-form" id="contactForm">
-          <input
-            name="name"
-            type="text"
-            placeholder="Name/Company"
-            class="name-input"
-          />
-          <input
-            name="email"
-            type="email"
-            placeholder="Email"
-            class="email-input"
-          />
-          <textarea
-            name="message"
-            id=""
-            placeholder="Message"
-            class="msg-input"
-          ></textarea>
-          <button type="submit" class="btn main-btn form-btn">Submit</button>
-        </form>
+            <div class="about-item-box">
+              <p class="bold-text">Rakamin Academy</p>
+              <p>Data Science Bootcamp (Sep 2022 - Jan 2023)</p>
+              <p>Final Score 88.39/100.00</p>
+            </div>
+          </div>
+
+          <div class="about-item internship">
+            <p class="about-item-title">
+              INTERNSHIP EXPERIENCE
+            </p>
+            <div class="about-item-box">
+              <p class="bold-text">Project-Based Intern: Data Scientist Virtual Internship Experience | ID/X Partner</p>
+              <p>Aug 2022 – Sep 2022</p>
+              <p>Created a data science end-to-end solution by 
+                machine learning implementation. The machine 
+                learning model is expected to help reduce the bad 
+                loan rate by 5.43%.</p>
+            </div>
+          </div>
+
+          <div class="about-item">
+            <img class="profile-pict" src="/images/no-bg-profile.png" alt="">
+          </div>
+
+        </div>
       </div>
     </section>
 
