add a new project

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Arya</title>
+    <title>Arya - My Portfolio</title>
   </head>
   <body>
     <!-- Navbar -->
@@ -89,7 +89,7 @@
             <img src="./images/project-img-credit-risk.jpg" alt="" />
           </div>
           <div class="project-desc">
-            <h4 class="project-title">Credit Risk Prediction</h4>
+            <h4 class="project-title">DS - Credit Risk Prediction</h4>
             <p class="project-subtitle text-muted">
               In this project, i implemented a Logistic Regression 
               model to predict whether a loan will be a bad loan or not. 
@@ -112,7 +112,7 @@
             <img src="./images/project-img-online-shoppers.png" alt="" />
           </div>
           <div class="project-desc">
-            <h4 class="project-title">E-commerce Web Visitor Conversion Prediction</h4>
+            <h4 class="project-title">DS - E commerce Web Visitor Conversion Prediction</h4>
             <p class="project-subtitle text-muted">
               In this project, I, also my team built an Extreme Gradient Boost (XG Boost Classifier) 
               model to predict that whether a web visitor
@@ -137,7 +137,7 @@
             <img src="./images/project-img-sql-ecomm.png" alt="" />
           </div>
           <div class="project-desc">
-            <h4 class="project-title">SQL - E Commerce Performance Analysis</h4>
+            <h4 class="project-title">DA - E Commerce Performance Analysis using SQL</h4>
             <p class="project-subtitle text-muted">
               In this project explained an analysis about the performance of an 
               e-commerce in South America in the 2016-2018 time period. There are three aspects analyzed, 
@@ -155,6 +155,30 @@
             </div>
           </div>
         </div>
+
+        <div class="project-content">
+          <div class="project-img reverse-img">
+            <img src="./images/project-img-hotel-business.png" alt="" />
+          </div>
+          <div class="project-desc">
+            <h4 class="project-title">DA - Hotel Business Investigation (Lang: ID)</h4>
+            <p class="project-subtitle text-muted">
+              Using data visualization to identify the behaviors of hotel bookers. 
+              We focus on investigating the relationships between the behaviors 
+              of hotel booking to cancellation ratio.
+            </p>
+
+            <div class="project-buttons">
+              <a
+                href="https://github.com/aryasa22/online-shoppers-intention"
+                target="_blank"
+                class="btn main-btn project-main-btn"
+                >Visist</a
+              >
+            </div>
+          </div>
+        </div>
+
             </div>
           </div>
         </div>
