--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 href="https://github.com/aryasa22/online-shoppers-intention"
                 target="_blank"
                 class="btn main-btn project-main-btn"
-                >Visist</a
+                >Visit</a
               >
             </div>
           </div>
@@ -173,7 +173,7 @@
                 href="https://github.com/aryasa22/online-shoppers-intention"
                 target="_blank"
                 class="btn main-btn project-main-btn"
-                >Visist</a
+                >Visit</a
               >
             </div>
           </div>
