--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 href="https://github.com/aryasa22/e-comm-performance-analysis"
                 target="_blank"
                 class="btn main-btn project-main-btn"
-                >Visist</a
+                >Visit</a
               >
             </div>
           </div>
